--- a/app/src/main/res/layout/detail_activities.xml
+++ b/app/src/main/res/layout/detail_activities.xml
@@ -36,9 +36,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/cardView"
         android:layout_marginTop="32dp"
+        android:layout_marginStart="16dp"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:gravity="center_horizontal"
+        android:gravity="start"
         android:text="Activity Name" />
 
     <TextView
@@ -49,6 +50,7 @@
         android:layout_marginTop="16dp"
         android:textSize="16sp"
         android:autoLink="web"
+        android:layout_marginStart="16dp"
         android:text="something@example.co.za"
         android:drawableStart="@drawable/website"/>
 
@@ -62,6 +64,7 @@
         android:drawableStart="@drawable/call"
         android:text="0825649853"
         android:textSize="16sp"
+        android:layout_marginStart="16dp"
         tools:ignore="TouchTargetSizeCheck" />
 
     <View
@@ -72,6 +75,9 @@
         android:alpha="0.2"
         android:layout_marginTop="8dp"
         android:background="@color/black"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+
         />
 
     <TextView
@@ -80,17 +86,29 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/lineAboveDescription"
         android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
         android:textSize="20sp"
         android:text="Description" />
 
+    <ScrollView
+        android:id="@+id/scrollDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fillViewport="true"
+        android:layout_below="@+id/tvDescriptionHeading">
     <TextView
         android:id="@+id/descriptionTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvDescriptionHeading"
         android:layout_marginTop="8dp"
+        android:isScrollContainer="true"
+        android:layout_marginStart="16dp"
+        android:paddingBottom="16dp"
+        android:gravity="start"
         android:textSize="16sp"
         android:text="Stuff about our shop" />
+    </ScrollView>
 
 
 </RelativeLayout>
