--- a/app/src/main/res/layout/activities_listview_layout.xml
+++ b/app/src/main/res/layout/activities_listview_layout.xml
@@ -10,6 +10,9 @@
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:background="@drawable/round_image"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:padding="8dp"
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"
         android:src="@drawable/ic_launcher_foreground"/>
