--- a/app/src/main/res/layout/detail_activities.xml
+++ b/app/src/main/res/layout/detail_activities.xml
@@ -17,7 +17,6 @@
         app:cardElevation="20dp"
         app:cardCornerRadius="20dp">
 
-
         <com.denzcoskun.imageslider.ImageSlider
             android:id="@+id/imageSlider"
             android:layout_width="match_parent"
@@ -25,8 +24,7 @@
             app:iss_period="1000"
             app:iss_auto_cycle="false"
             app:iss_delay="1000"
-            app:iss_corner_radius="20"
-            />
+            app:iss_corner_radius="20" />
 
     </androidx.cardview.widget.CardView>
 
@@ -39,6 +37,7 @@
         android:layout_marginStart="16dp"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:textColor="@color/black"
         android:gravity="start"
         android:text="Activity Name" />
 
@@ -77,7 +76,6 @@
         android:background="@color/black"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-
         />
 
     <TextView
