--- a/app/src/main/res/layout/activities_listview_layout.xml
+++ b/app/src/main/res/layout/activities_listview_layout.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginStart="16dp"
+    >
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="92dp"
-        android:layout_height="92dp"
+        android:layout_height="70dp"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:background="@drawable/round_image"
@@ -24,7 +26,8 @@
         android:layout_marginStart="16dp"
         android:layout_toEndOf="@id/imageView"
         android:layout_alignTop="@id/imageView"
-        android:textSize="18sp"
+        android:fontFamily="@font/roboto_regular"
+        android:textSize="22sp"
         android:textColor="@color/black"
         android:text="Louise Leather" />
 
@@ -33,8 +36,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:textSize="16sp"
-
+        android:textSize="14sp"
+        android:fontFamily="@font/roboto_regular"
         android:layout_toEndOf="@id/imageView"
         android:layout_below="@id/tvActivityName"
         android:text="Arts and Crafts" />
@@ -46,6 +49,8 @@
         android:layout_marginStart="16dp"
         android:layout_toEndOf="@id/imageView"
         android:layout_below="@id/tvCategoryName"
+        android:fontFamily="@font/roboto_regular"
+        android:textSize="14sp"
         android:drawableStart="@drawable/website"
         android:text="" />
 
@@ -56,6 +61,8 @@
         android:layout_below="@id/tvWebsite"
         android:layout_marginStart="16dp"
         android:layout_toEndOf="@id/imageView"
+        android:textSize="14sp"
+        android:fontFamily="@font/roboto_regular"
         android:drawableStart="@drawable/call"
         android:text="000 000 0000" />
 </RelativeLayout>
